Update styles and layout

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     <!-- End Contact -->
 
     <!-- Start Footer -->
-    <div class="footer">
+    <div class="foooter">
       <div class="container">
         <img src="/img/logo.png">
         <div class="social">we are social</div>
