--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="design">
       <div class="container">
         <div class="img">
-          <img src="/img/mobile.png" alt="mobile" />
+          <img src="img/mobile.png" alt="mobile" />
         </div>
         <div class="text">
           <h2>Our Design Comes With...</h2>
@@ -152,21 +152,21 @@
       </div>
       <div class="img-container">
         <div class="box">
-          <img src="/img/shuffle-01.jpg" alt="">
+          <img src="img/shuffle-01.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-02.jpg" alt="">
+          <img src="img/shuffle-02.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-03.jpg" alt="">
+          <img src="img/shuffle-03.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -180,28 +180,28 @@
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-05.jpg" alt="">
+          <img src="img/shuffle-05.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-06.jpg" alt="">
+          <img src="img/shuffle-06.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-07.jpg" alt="">
+          <img src="img/shuffle-07.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-08.jpg" alt="">
+          <img src="img/shuffle-08.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -214,7 +214,7 @@
      
     <!-- Start Video -->
     <div class="video">
-      <video autoplay loop muted src="/img/awesome-video.mp4" type="video/mp4" style="width:100%"></video>
+      <video autoplay loop muted src="img/awesome-video.mp4" type="video/mp4" style="width:100%"></video>
       <div class="text">
         <h2>Super Awesome Video Here</h2>
         <p>Its All You Need</p>
@@ -230,7 +230,7 @@
           <h2>About Us</h2>
           <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
         </div>
-        <img src="/img/about.png">
+        <img src="img/about.png">
       </div>
     </div>
     <!-- End About -->
@@ -269,14 +269,14 @@
           <h3>testimonials</h3>
           <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
           <div class="content">
-            <img src="/img/skills-01.jpg" alt="prof1">
+            <img src="img/skills-01.jpg" alt="prof1">
             <div class="text">
               Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
               <p>John Doe, CEO</p>
             </div>
           </div>
           <div class="content">
-            <img src="/img/skills-02.jpg" alt="prof1">
+            <img src="img/skills-02.jpg" alt="prof1">
             <div class="text">
               Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
               <p>John Doe, CEO</p>
@@ -452,7 +452,7 @@
     <!-- Start Footer -->
     <div class="foooter">
       <div class="container">
-        <img src="/img/logo.png">
+        <img src="img/logo.png">
         <div class="social">we are social</div>
         <div class="media">
           <i class="fa-brands fa-facebook-f"></i>
