--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="box">
-          <img src="/img/shuffle-04.jpg" alt="">
+          <img src="img/shuffle-04.jpg" alt="">
           <div class="txt">
             <h4>Awesome Image</h4>
             <p>Photography</p>
